# cpp-driver

./: .gitignore  .lycheeignore  README-dev.md  README.md  index.html
.github/workflows/: docs-pages.yaml  docs-pages@v2.yaml  docs-pr.yaml  docs-pr@v1.yaml
docs/: Makefile  pyproject.toml
docs/source/: conf.py  contents.rst  scylla-specific.rst
docs/source/_templates/: version-warning.html
include/: cassandra.h
master/: .buildinfo  404.html  contents.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
master/.doctrees/: contents.doctree  environment.pickle  index.doctree
master/_sources/: index.md.txt
master/api/: index.html  struct.CassAggregateMeta.html  struct.CassAuthenticator.html  struct.CassAuthenticatorCallbacks.html  struct.CassBatch.html  struct.CassCluster.html  struct.CassCollection.html  struct.CassColumnMeta.html  struct.CassCustomPayload.html  struct.CassDataType.html  struct.CassErrorResult.html  struct.CassExecProfile.html  struct.CassFunctionMeta.html  struct.CassFuture.html  struct.CassIndexMeta.html  struct.CassInet.html  struct.CassIterator.html  (+28 more)
src/: CMakeLists.txt  cluster.cpp  cluster.hpp  cluster_config.cpp  cluster_connector.cpp  cluster_connector.hpp  config.hpp  connection_pool.cpp  connection_pool.hpp  connection_pool_manager.cpp  connection_pool_manager.hpp  constants.hpp  exported_connection.cpp  exported_connection.hpp  md5.cpp  optional.hpp  random.cpp  request_handler.cpp  request_processor.cpp  session_base.cpp  session_base.hpp  socket_connector.cpp
tests/: CMakeLists.txt
(+124 files in other folders)
