[tool.poetry]
name = "cpp-driver"
description = "Scylla C/C++ Driver"
version = "0.1"
authors = ["ScyllaDB Documentation Contributors"]

[tool.poetry.dependencies]
breathe="4.35.0"
python = "^3.9"
pyyaml = "6.0.1"
pygments = "2.15.1"
redirects_cli ="~0.1.2"
sphinx-scylladb-theme = "~1.7.2"
sphinx-sitemap = "2.5.1"
sphinx-autobuild = "2021.3.14"
Sphinx = "7.2.6"
sphinx-multiversion-scylla = "~0.3.1"
sphinx-scylladb-markdown = "^0.1.2"
[tool.poetry.dev-dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api" 
